--- a/support/static/ngTemplates/app.sessionHistory.html
+++ b/support/static/ngTemplates/app.sessionHistory.html
@@ -71,8 +71,8 @@
                        <tr ng-repeat="data in reviewData" style="" ng-click="tableAction(data,true)">
                          <td>
                            <div class="" style="border-radius:50%;width:50px;height:50px;margin:5px 10px;float:left">
-                             <!-- <img style="width:50px" src="{{data[0].user_id| getDP}}" alt=""> -->
-                             <img style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt="">
+                             <img style="width:50px" src="{{data[0].user_id| getDP}}" alt="">
+                             <!-- <img style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt=""> -->
                            </div>
                            <span style="display:inline-block">
                              <div class="">
@@ -84,6 +84,9 @@
                              </div>
                              <div class="">
                                <span style="font-size: 13px;opacity: 0.8;">Created : {{data[0].created|  date : 'dd-MMM-yyyy'}}</span>
+                               <span ng-if="data[0].statusChat=='started'" style="font-size: 14px;opacity: 0.8;color:green;background:#e0e0e0;padding:0px 5px" ><b>{{data[0].statusChat|humanize}}</b></span>
+                               <span ng-if="data[0].statusChat=='closed'" style="font-size: 14px;opacity: 0.8;color:#A40B0B;background:#e0e0e0;padding:0px 5px"  ><b>{{data[0].statusChat|humanize}}</b></span>
+                               <span ng-if="data[0].statusChat=='reviewed'" style="font-size: 14px;opacity: 0.8;color:brown;background:#e0e0e0;padding:0px 5px" ><b>{{data[0].statusChat|humanize}}</b></span>
                              </div>
                            </span>
                            <div class="" style="margin:5px 10px;float:right;font-size:20px;padding:12px;opacity:0.6;">
@@ -224,8 +227,8 @@
                        <tr ng-repeat="data in archivedData" style="" ng-click="tableArchAction(data,true)">
                          <td>
                            <div class="" style="border-radius:50%;width:50px;height:50px;margin:5px 10px;float:left">
-                             <!-- <img style="width:50px" src="{{data[0].user_id| getDP}}" alt=""> -->
-                             <img style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt="">
+                             <img style="width:50px" src="{{data[0].user_id| getDP}}" alt="">
+                             <!-- <img style="width:50px" src="http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/256/Administrator-icon.png" alt=""> -->
                            </div>
                            <span style="display:inline-block">
                              <div class="">
@@ -237,6 +240,9 @@
                              </div>
                              <div class="">
                                <span style="font-size: 13px;opacity: 0.8;">Created : {{data[0].created|  date : 'dd-MMM-yyyy'}}</span>
+                               <span ng-if="data[0].statusChat=='started'" style="font-size: 14px;opacity: 0.8;color:green;background:#e0e0e0;padding:0px 5px" ><b>{{data[0].statusChat|humanize}}</b></span>
+                               <span ng-if="data[0].statusChat=='closed'" style="font-size: 14px;opacity: 0.8;color:#A40B0B;background:#e0e0e0;padding:0px 5px"  ><b>{{data[0].statusChat|humanize}}</b></span>
+                               <span ng-if="data[0].statusChat=='reviewed'" style="font-size: 14px;opacity: 0.8;color:brown;background:#e0e0e0;padding:0px 5px" ><b>{{data[0].statusChat|humanize}}</b></span>
                              </div>
                            </span>
                            <div class="" style="margin:5px 10px;float:right;font-size:20px;padding:12px;opacity:0.6;">
