--- a/support/static/ngTemplates/app.masterSheet.newProduct.html
+++ b/support/static/ngTemplates/app.masterSheet.newProduct.html
@@ -18,6 +18,10 @@
         <input type="text " class="form-control" ng-model="data.description_2" placeholder="Description 2">
       </div>
       <div class="form-group">
+        <label>Replaced By</label>
+        <input type="text " class="form-control" ng-model="data.replaced" placeholder="Replaced By">
+      </div>
+      <div class="form-group">
         <label>Weight</label>
         <input ng-model="data.weight" type="number" class="form-control" placeholder="Weight">
       </div>
