--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93.7vh;">
+<div class="shaddowed card bg-white" style="min-height:93.7vh;overflow: hidden">
   <breadcrumb></breadcrumb>
 
 
@@ -60,7 +60,7 @@
       </div>
         </div>
           <div class="col-md-1">
-            <h3 style="margin-top:25px">{{totSum.toFixed(2)}}</h3>
+            <h2 style="margin-top:25px">{{totSum.toFixed(2)}}</h2>
           </div>
     </div>
   <!-- <div class="row">
