--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -198,7 +198,11 @@
                     <span ><a class="btn btn-primary" target="_blank" href="/api/support/quotation/?project={{form.pk}}&exRate={{form.exRate}}&typ=INR" style="min-width:50px"><i class="fa fa-download"></i>
                         Download Quotation In INR </a> </span>
                   </div>
-                </div>
+                </div><br>
+                <div class="row" ng-if="form.quoteRefNumber.length>0||form.projects.length>0||form.data.length>0">
+                <span ><a class="btn btn-primary" target="_blank" href="/api/support/quotation/?project={{form.pk}}&exRate={{form.exRate}}&typ=Invoice" style="min-width:50px"><i class="fa fa-download"></i>
+                    Download Invoice </a> </span>
+                  </div>
                 <div class="row">
                   <div class="col-md-12 text-center" style="padding-top:20px">
                     <span><a class="btn btn-primary" target="_blank" href="/api/support/grn/?project={{form.pk}}"> <i class="fa fa-download"></i> Goods Received Note </a></span>
