--- a/homepage/static/ngTemplates/app.homepage.testimonials.html
+++ b/homepage/static/ngTemplates/app.homepage.testimonials.html
@@ -81,11 +81,13 @@
     <div class="row" style="margin-top:2em;">
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
-          <div class="col-md-5 studentcard" style="background-color: #D4DBE3;min-height:300px;">
-            <img src="/static/images/24tut/stu25.jpg" class="img-circle" style="width:110%;height:300px;margin-left: -10px;" />
+          <div class="col-md-5 studentcard" style="min-height:300px;">
+            <img src="/static/images/24tut/student3.png"  style="width:219.683px;height:300px;margin-left: -15px;" />
           </div>
-          <div id="circle">
+          <div class="circle">
             <div><b>83%</b></div>
+          </div>
+          <div class="colorcircle">
           </div>
           <div class="col-md-7 text-left">
             <div style="margin-top:3em;">
@@ -95,21 +97,20 @@
               <span style="font-size:18px;"><b>Laren Ralpha</b></span>
             </div>
             <div>
-              <span style="font-size:15px;color:#5B5B5B;">Scientology Student - Europe</span>
-            </div>
-            <div style="padding-bottom: 1em;">
-              <span><i class=" fa fa-twitter" aria-hidden="true"> in</i><i style="margin-left:5px;" class="fa fa-google-plus" aria-hidden="true"></i></span>
+              <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Scientology Student - Europe</span>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
-          <div class="col-md-5 studentcard" style="background-color: #D4DBE3;min-height:300px;">
-            <img src="/static/images/24tut/stu25.jpg" class="img-circle" style="width:110%;height:300px;margin-left: -10px;" />
+          <div class="col-md-5 studentcard" style="min-height:300px;">
+            <img src="/static/images/24tut/student2.png"  style="width:219.683px;height:300px;margin-left: -15px;" />
           </div>
-          <div id="circle">
+          <div class="circle">
             <div><b>74%</b></div>
+          </div>
+          <div id="stucard2" class="colorcircle" ng-style="myObj">
           </div>
           <div class="col-md-7 text-left">
             <div style="margin-top:3em;">
@@ -119,10 +120,7 @@
               <span style="font-size:18px;"><b>James Ramirez</b></span>
             </div>
             <div>
-              <span style="font-size:15px;color:#5B5B5B;">Security Student - Brazil</span>
-            </div>
-            <div style="padding-bottom: 1em;">
-              <span><i class=" fa fa-twitter" aria-hidden="true"> in</i><i style="margin-left:5px;" class="fa fa-google-plus" aria-hidden="true"></i></span>
+              <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Security Student - Brazil</span>
             </div>
           </div>
         </div>
@@ -131,49 +129,47 @@
     <div class="row" style="margin-top:2em;">
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
-          <div class="col-md-5 studentcard" style="background-color: #D4DBE3;min-height:300px;">
-            <img src="/static/images/24tut/stu25.jpg" class="img-circle" style="width:110%;height:300px;margin-left: -10px;" />
-          </div>
-          <div id="circle">
-            <div><b>83%</b></div>
-          </div>
-          <div class="col-md-7 text-left">
-            <div style="margin-top:3em;">
+          <div class="col-md-7  carddesign">
+            <div style="margin-top:3em;" class="mobilepadd">
               <span style="font-size:18px;color:#5B5B5B;">Trignometry & Science With Astro Colloboration</span>
             </div>
-            <div class="stucardtext">
+            <div class="stucardtext1">
               <span style="font-size:18px;"><b>Linda Camilia</b></span>
             </div>
-            <div>
-              <span style="font-size:15px;color:#5B5B5B;">Social Student - Australia</span>
+            <div style="padding-bottom: 4em;">
+              <span style="font-size:15px;color:#5B5B5B;margin-bottom: 20px;">Social Student - Australia</span>
             </div>
-            <div style="padding-bottom: 1em;">
-              <span><i class=" fa fa-twitter" aria-hidden="true"> in</i><i style="margin-left:5px;" class="fa fa-google-plus" aria-hidden="true"></i></span>
-            </div>
+          </div>
+          <div class="circleright">
+            <div><b>83%</b></div>
+          </div>
+          <div class="colorcircle1" ng-style="myObjcolor">
+          </div>
+          <div class="col-md-5 studentcard1" style="min-height:300px;">
+            <img src="/static/images/24tut/student1.png"  style="width:219.683px;height:300px;margin-left: -15px;margin-bottom: 20px;" />
           </div>
         </div>
       </div>
       <div class="col-md-6" style="position: relative;">
         <div class="movie-card">
-          <div class="col-md-5 studentcard" style="background-color: #D4DBE3;min-height:300px;">
-            <img src="/static/images/24tut/stu25.jpg" class="img-circle" style="width:110%;height:300px;margin-left: -10px;" />
-          </div>
-          <div id="circle">
-            <div><b>83%</b></div>
-          </div>
-          <div class="col-md-7 text-left">
-            <div style="margin-top:3em;">
+          <div class="col-md-7  carddesign">
+            <div style="margin-top:3em;" class="mobilepadd">
               <span style="font-size:18px;color:#5B5B5B;">Successfully Completed Grade 3 science & Technology Classes</span>
             </div>
-            <div class="stucardtext">
+            <div class="stucardtext1">
               <span style="font-size:18px;"><b>Laren Ralpha</b></span>
             </div>
-            <div>
+            <div style="padding-bottom: 4em;">
               <span style="font-size:15px;color:#5B5B5B;">Scientology Student - Europe</span>
             </div>
-            <div style="padding-bottom: 1em;">
-              <span><i class=" fa fa-twitter" aria-hidden="true"> in</i><i style="margin-left:5px;" class="fa fa-google-plus" aria-hidden="true"></i></span>
-            </div>
+          </div>
+          <div class="circleright">
+            <div><b>83%</b></div>
+          </div>
+          <div class="colorcircle1">
+          </div>
+          <div class="col-md-5 studentcard1" style="min-height:300px;">
+            <img src="/static/images/24tut/student3.png"  style="width:219.683px;height:300px;margin-left: -15px;margin-bottom: 20px;" />
           </div>
         </div>
       </div>
@@ -182,27 +178,95 @@
 
 
 
-  <!-- <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');margin:0">
+  <div class="container-fluid no_padding about_head" style="background-image: linear-gradient(rgba(36, 32, 32, 0.79), rgba(32, 32, 32, 0.74)), url('static/images/24tut/diss.jpg');margin:0">
     <div class="container">
-      <div class="col-md-12 text-center" style="margin-top:4em;">
-        <span style="color:#fff;font-size:3em;font-weight:bolder;position: relative">Students are Benefited through these Values</span><br>
-        <span class="u_line" style="position: absolute;left:46%"></span>
+      <div class=" text-center" style="margin-top:4em;">
+        <span class="stuhead">Students are Benefited through these Values</span><br>
+        <span class="u_line line-u"></span>
       </div>
-      <div class="col-md-4 text-center">
-        <ul>
-          <li>Lorem ipsum dolor sit amet.</li>
-          <li>Lorem ipsum dolor sit amet sfgd.</li>
-          <li>Lorem ipsum dolor sit amet sgjkl.</li>
-        </ul>
+      <div class="row">
+        <div class="col-md-12  text-center">
+          <div style="padding-top: 3em;">
+            <img src="static/images/24tut/circle with video cam.png" width='100px' height='100px' />
+          </div>
+
+
+        </div>
+        <div class="col-md-4 text-center courses1 " style="margin-top:6em;">
+          <ul>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet sfgd.</li>
+            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
+          </ul>
+        </div>
+        <div class="col-md-4 text-center courses1 " style="margin-top:6em;">
+          <ul>
+            <li>Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
+            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
+          </ul>
+        </div>
+        <div class="col-md-4 text-center courses1 " style="margin-top:6em;">
+          <ul>
+            <li>Lorem ipsum dolor sit amet sgjklfgh</li>
+            <li>Lorem ipsum dolor sit amet sfgd.</li>
+            <li>Lorem ipsum dolor sit amet sgjklfgh.</li>
+          </ul>
+        </div>
       </div>
+      <div class="text-center" style="margin-bottom:2em;"><button class="btn-style1" type="button">Learn About our Values</button></div>
+
     </div>
 
-  </div> -->
+  </div>
 
-  <div class="container-fluid">
-    <div class="container" style="margin-top:2em;">
+  <div class="container-fluid" style="padding-bottom:2em;border-bottom: 1px solid #F1F1F1;background-image: url('/static/images/24tut/part.png');background-size: cover;background-repeat: no-repeat">
+    <div class="container" style="margin-top:4em;">
+      <div class="col-md-4" style="padding-bottom: 2em;">
+        <span style="font-size:18px;color:#5B5B5B;"><b style="color:#000;">eLearny</b> has changed my life.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+          veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+        <div style="font-size:18px;color:#5B5B5B;margin-top:2em;"><b style="color:#000;">eLearny</b> has changed my life.Lorem ipsum dolor sit amet.</div>
+        <div style="font-size:25px;padding-top:2em;"><b>Linda Cameillia</b></div>
+        <span style="font-size:16px;color:#5B5B5B;"> Social Student - Australia</span>
+      </div>
+      <div class="col-md-4 imghide">
+        <div class="text-left" style="float:left;">
+          <img src="/static/images/24tut/iphone.png" width='380px' height='480px' />
+        </div>
+      </div>
       <div class="col-md-4">
-        <span><b>eLearny</b>has changed my life.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+        <div class="flex-container text-center">
+          <div class="flex-item ">
+            <div class="stublock">
+              <img src="/static/images/24tut/tell5.png" style="width: 110px;height: 110px;border-radius: 55px;">
+              <div class="viewstudent">
+                <img src="/static/images/24tut/clip.png">
+              </div>
+            </div>
+            <div style="padding-top:1em;"> <b style="font-size:22px;">Jeena Davis</b></div>
+            <span style="font-size:16px;color:#5B5B5B;">Consultant</span>
+          </div>
+          <div class="flex-item" style="padding-top: 2em;">
+            <div class="stublock">
+              <img src="/static/images/24tut/tell2.jpeg" style="width: 110px;height: 110px;border-radius: 55px;">
+              <div class="viewstudent">
+                <img src="/static/images/24tut/clip.png">
+              </div>
+            </div>
+            <div style="padding-top:1em;"> <b style="font-size:22px;">Jenny Smith</b></div>
+            <span style="font-size:16px;color:#5B5B5B;">Consultant</span>
+          </div>
+          <div class="flex-item" style="padding-top: 2em;">
+            <div class="stublock">
+              <img src="/static/images/24tut/tell1.jpeg" style="width: 110px;height: 110px;border-radius: 55px;">
+              <div class="viewstudent">
+                <img src="/static/images/24tut/clip.png">
+              </div>
+            </div>
+            <div style="padding-top:1em;"> <b style="font-size:22px;">Stephina Cox</b></div>
+            <span style="font-size:16px;color:#5B5B5B;">Consultant</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
