--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -482,12 +482,12 @@
                 <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable(item.listPk,$index)"> <i class="fa fa-trash"></i> </button>
               </td>
             </tr>
-            <tr>
-              <td><button style="background-color:white;border:none;" ng-click="addTableRow($index)"><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
+            <tr  >
+              <td ng-if="showButton"><button style="background-color:white;border:none;" ng-click="addTableRow($index)" ><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
             </tr>
           </tbody>
         </table>
-        <div class="row" ng-if="showbutton||projects.length>0">
+        <div class="row" ng-if="showbutton||projects.length>0" style="padding-top:15px">
           <div class="col-md-11">
             <button type="button" class="btn btn-success pull-right" mwl-confirm title="Confirm" message="Are you sure?" data-placement="top" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
               confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
