--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-md-3" style="padding-top:20px">
       <strong style="margin:0 13px 0 20px">Inventory</strong><switch ng-model="modeToggle" class="neutral "></switch>
-      <strong style="margin-left:13px">Material Issue</strong>
+      <strong style="margin-left:13px">Material Issued</strong>
       <span><button type="button" class="btn btn-success  pull-right" ng-click="download()">Download</button></span>
     </div>
     <div class="col-md-8  text-left" ng-if="!modeToggle" style="padding-top:20px">
