--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -62,7 +62,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" ng-if="form.responsible.length>0">
           <div class="col-md-12 text-center">
             <label> Responsible Persons : </label>
           </div>
