--- a/support/static/ngTemplates/app.vendor.item.html
+++ b/support/static/ngTemplates/app.vendor.item.html
@@ -1,6 +1,6 @@
 <div class="col-md-4" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.service.item">
-  <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);" ng-click="rowActionClicked('edit')">
-    <div class="row text-center" style="border-bottom: 1px solid #dedede;background-color:rgb(51, 122, 183);color:white;height:6vh;">
+  <div class="container-fluid card" style="border: 1px solid #090a0a;" ng-click="rowActionClicked('edit')">
+    <div class="row text-center" style="height:6vh;">
       <div class="col-md-12" style="position:relative;display:block;">
         <div class="row" style="padding-left:10px;">
           <h3>{{data.name}}</h3>
