--- a/support/static/ngTemplates/app.projects.html
+++ b/support/static/ngTemplates/app.projects.html
@@ -22,7 +22,7 @@
         <uib-tab>
           <uib-tab-heading>
             Archieve
-            <i class="fa fa-list-ul"></i>
+            <i class="fa fa-archive"></i>
           </uib-tab-heading>
           <div class="container-fluid">
             <generic-Table data="data.archieveData" config-Obj="{{archieveConfig}}" callback-Fn="tableActionArchieve"></generic-Table>
@@ -31,7 +31,7 @@
         <uib-tab>
           <uib-tab-heading>
             Junk
-            <i class="fa fa-list-ul"></i>
+            <i class="fa fa-trash"></i>
           </uib-tab-heading>
           <div class="container-fluid">
             <generic-Table data="data.junkData" config-Obj="{{junkConfig}}" callback-Fn="tableActionJunk"></generic-Table>
