--- a/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.default.html
@@ -20,6 +20,16 @@
         <input ng-model="detailsForm.mobile" type="text" class="form-control" id="" placeholder="Mobile No" ng-disabled="!editMode">
       </div>
     </div>
+    <div class="form-group">
+      <div class="col-xs-6" style="padding:15px 5px 0 0">
+        <label for="" style="margin:0px"><strong>Old Password</strong></label>
+        <input ng-model="detailsForm.oldPassword" type="password" class="form-control" id="" placeholder="Old Password" ng-disabled="!editMode">
+      </div>
+      <div class="col-xs-6" style="padding:15px 0 0 5px">
+        <label for="" style="margin:0px"><strong>New Password</strong></label>
+        <input ng-model="detailsForm.newPassword" type="password" class="form-control" id="" placeholder="New Password" ng-disabled="!editMode">
+      </div>
+    </div>
     <div ng-if="isGst" class="form-group">
       <div class="col-xs-12" style="padding:15px 5px 0 0">
         <label for="" style="margin:0px"><strong>GST</strong></label>
@@ -37,21 +47,23 @@
   </div>
 </div>
 
-<div class="row">
-  <p style="text-align:center;">
-    <div class="row">
-      <div class="col-md-4">
-        <h1 style="text-align:center;"> {{inCart.length}}</h1>
-        <h2 style="text-align:center;"> In Cart</h2>
-      </div>
-      <div class="col-md-4">
-        <h1 style="text-align:center;">{{inFavourite.length}} </h1>
-        <h2 style="text-align:center;"> In Whishlist</h2>
-      </div>
-      <div class="col-md-4">
-        <h1 style="text-align:center;">{{inInvoice.length}} </h1>
-        <h2 style="text-align:center;"> In Process</h2>
-      </div>
+<div class="row" style="padding-top:20px;">
+  <div class="col-md-4">
+    <div class="card text-center" style="width:70%; margin: 0 15% 15px 15%;">
+      <p style="text-align:center; background-color:#e0e0e0; font-size:20px; margin:0px;"><b> In Cart</b></p>
+      <p style="text-align:center; font-size:30px; font-weight:700; margin:0px;"> {{inCart.length}}</p>
     </div>
-  </p>
+  </div>
+  <div class="col-md-4">
+    <div class="card text-center" style="width:70%; margin:0 15% 15px 15%;">
+      <p style="text-align:center; background-color:#e0e0e0; font-size:20px; margin:0px;"><b> In Whishlist</b></p>
+      <p style="text-align:center; font-size:30px; font-weight:700; margin:0px;"> {{inFavourite.length}}</p>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card text-center" style="width:70%; margin: 0 15% 15px 15%;">
+      <p style="text-align:center; background-color:#e0e0e0; font-size:20px; margin:0px;"><b> In Process</b></p>
+      <p style="text-align:center; font-size:30px; font-weight:700; margin:0px;"> {{inInvoice.length}}</p>
+    </div>
+  </div>
 </div>
