--- a/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.settings.html
@@ -21,6 +21,17 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-md-12 col-xs-12">
+          <div class="form-group" >
+            <label>Phone No : </label>
+            <input ng-model="form.mobileNo" type="text" class="form-control" placeholder="Phone No..."></input>
+          </div>
+        </div>
+      </div>
+
+
       <div ng-if="isStoreGlobal">
         <div class="row">
           <div class="col-md-6 col-xs-6">
@@ -51,7 +62,6 @@
           </div>
         </div>
       </div>
-      {{isStoreGlobal}}ddd
       <div ng-if="!isStoreGlobal">
         <div class="row">
           <div class="col-md-6 col-xs-6">
